base/src/test/resources/failure/tyck/stringlit-3.aya.txt
In file $FILE:5:19 ->

  3 |   open data Unit : Type | unit
  4 |   
  5 |   def test : Unit => "123"
    |                      ^---^

Error: Cannot check the expression
         "123"
       of type
         String
       against the type
         Unit

1 error(s), 0 warning(s).
What are you doing?
